tests/snapshots/snapshots__interpreter@handler_funval.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/handler_funval.pr
---
999
10
41
41
51
114
=> ()
