tests/snapshots/snapshots__interpreter@handler_implicit_return.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/handler_implicit_return.pr
---
42
9
=> ()
