tests/snapshots/snapshots__interpreter@handler_partial_forward.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/handler_partial_forward.pr
---
31
=> ()
