tests/snapshots/snapshots__interpreter@higher.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/higher.pr
---
12
64
40
30
25
=> ()
