tests/snapshots/snapshots__interpreter@ho_row_inst.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/ho_row_inst.pr
---
3
2
2
4
=> ()
