tests/snapshots/snapshots__interpreter@incr_diff.pr.snap
---
source: tests/snapshots.rs
assertion_line: 482
expression: interp_output(path)
input_file: tests/cases/run/incr_diff.pr
---
incremental == from-scratch: PASS
=> ()
