tests/snapshots/snapshots__interpreter@int_boundary.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/int_boundary.pr
---
4611686018427387903
4611686018427387904
4611686018427387904
4611686018427387903
-4611686018427387904
-4611686018427387905
9223372036854775806
9223372036854775808
4611686018427387904
true
true
1
4611686018427387904
=> ()
