tests/snapshots/snapshots__interpreter@intern_replay.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/intern_replay.pr
---
ids: [0, 1, 0, 2, 1, 3]
replay stable: true
size: 4
id of match: Some(2)
id of where: None
name of 2: Some("match")
repeat id: 1, size unchanged: true
=> ()
